--- a/src/style/index.less
+++ b/src/style/index.less
@@ -15,6 +15,7 @@
 @import "utils-size";
 @import "utils-border";
 @import "utils-spacing";
+@import "search-bar";
 body {
   margin: 0;
   padding: 0;
@@ -52,6 +53,7 @@ body {
   }
 }
 .gutter-example{
+  height: 100%;
   .ant-row{
     //margin-left: 0 !important;
     //margin-right: 0 !important;
@@ -59,6 +61,10 @@ body {
       background: transparent;
       border: 0;
     }
+  }
+  .container{
+    background-color: white;
+    height: 100%;
   }
 }
 .gutter-box {
